--- a/html/themes/sexybuttons/sexybuttons.css
+++ b/html/themes/sexybuttons/sexybuttons.css
@@ -468,3 +468,5 @@
 .sexybutton span.cart			{ background-image: url(images/icons/silk/cart.png) !important; }
 .sexybutton span.wand			{ background-image: url(images/icons/silk/wand.png) !important; }
 .sexybutton span.wrench			{ background-image: url(images/icons/silk/wrench.png) !important; }
+.sexybutton span.zoom_in		{ background-image: url(images/icons/silk/zoom_in.png) !important; }
+
