--- a/html/themes/sexybuttons/sexybuttons.css
+++ b/html/themes/sexybuttons/sexybuttons.css
@@ -469,4 +469,7 @@
 .sexybutton span.wand			{ background-image: url(images/icons/silk/wand.png) !important; }
 .sexybutton span.wrench			{ background-image: url(images/icons/silk/wrench.png) !important; }
 .sexybutton span.zoom_in		{ background-image: url(images/icons/silk/zoom_in.png) !important; }
+.sexybutton span.hourse_go		{ background-image: url(images/icons/silk/house_go.png) !important; }
+.sexybutton span.chart_curve	{ background-image: url(images/icons/silk/chart_curve.png) !important; }
+.sexybutton span.chart_bar		{ background-image: url(images/icons/silk/chart_bar.png) !important; }
 
