--- a/html/resource/themes/css/login.css
+++ b/html/resource/themes/css/login.css
@@ -3,12 +3,14 @@
 }
 
 .kit-login-box {
+	position:relative;
+	float:left;
     width: 390px;
-    margin: 10% auto;
     background-color: #666;
     background-color: rgba(46, 46, 46, 0.61);
     border-radius: 10px;
     color: aliceblue;
+	display:none;
     box-shadow: 0px 0px 20px 0px #5785f2;
 }
 
