--- a/html/resource/themes/css/print.css
+++ b/html/resource/themes/css/print.css
@@ -40,3 +40,19 @@
 .panel .panelContent { border-color:#b8d0d6; background:#eef4f5;}
 .panel .grid { border-color:#b8d0d6;}
 
+.plugin_block { float:left; font-size:13.5px; height:240px; width:450px; box-shadow: 0px 0px 10px 0px #030e1f; }
+.pluginMeta { float:left; width:320px;line-height:18px; height:140px; margin-top:10px; }
+.pluginImg { float:left; height:140px; margin-left:10px; overflow:hidden; text-overflow:ellipsis; margin-top:10px; }
+.pluginImg img { margin-top:10px; background-color:#f1f3f4; width:90px; height:90px; display:block;}
+.pluginPrice { width:100px; float:left; margin-top:5px; font-size:13px; text-align:center; color:red;}
+.pluginDisItem { font-size:13.5px; width:320px; overflow:hidden; text-overflow:ellipsis; }
+.pluginName { font-size:18px; width:320px; font-weight:bold; height:30px; overflow:hidden; text-overflow:ellipsis; }
+.pluginItem { float:left; font-size:13.5px; width:170px; overflow:hidden; text-overflow:ellipsis; }
+.pluginItem-right { float:left; font-size:13.5px; width:140px; overflow:hidden; text-overflow:ellipsis; }
+.pluginDesc { line-height:16px; margin-top:5px; margin-left:10px; margin-right:10px; margin-bottom:10px; font-size:13px; height:50px; width:420px; overflow:hidden; text-overflow:ellipsis; float:left; text-align:left !important;}
+.pluginAuth { width:100px; float:left; margin-left:20px; cursor:default;}
+.pluginAuth .nav { float:left; font-size:14px; color:#448af3;}
+.pluginOp { width:120px; float:right; margin-left:10px; height:30px; cursor:pointer; margin-right:20px;}
+.pluginOp .nav { float:right; font-size:14px; color:#448af3;}
+
+
